--- a/src/locales/es/translations.json
+++ b/src/locales/es/translations.json
@@ -106,7 +106,7 @@
     },
     "contact": {
       "titlePage": "Contacto",
-      "titleContact": "Por favor, no dude en ponerse en contacto conmigo en cualquier momento, utilizando el formulario de abajo o haga clic en los iconos de las redes sociales.",
+      "titleContact": "Por favor, no dude en ponerse en contacto conmigo en cualquier momento, utilizando el formulario debajo o haga clic en los iconos de las redes sociales.",
       "name": "Nombre",
       "email": "Email",
       "comments": "Commentarios",
