--- a/TODO.txt
+++ b/TODO.txt
@@ -2,14 +2,10 @@ Where r we now?
     - Testing paypal sandbox and downloaing test .zip files
     - Testing site velocity, fixes, etc
         - Check for images and prob fixes tomorrow
-    - Subir los archivos de musica, usando git lfs, luego probar si hace una build sin problemas y probar
-    en netlify.
-    - Luego probar si al descargar los audios, genera algun gasto de data, tanto en netlify
-    como en github. Para dedicir si usamos github como repositorio o nos movemos a otro que nos
-    genere gastos por consumo de banda ancha.
+    - Probado github y por los archivos no conviene usarlo.
+    - Probando ahora gitlab para medir consumo, segun que dan 10GB de ancho de banda.
 
 TODO:
-    - Replace the .zip files for the music ones.
     - Enable the live paypal mode.
     - Find someone to test it buying a CD.
         - Get feedback from that user experience.
