adding google analytics

--- a/TODO.txt
+++ b/TODO.txt
@@ -18,3 +18,12 @@ TODO:
     - Go live, add the custom domain. DONE - 06/12.
     - Add SSL if needed. Netflity added for  free for 3 months under auto-renew.
     
+
+Saludos amigas y amigos del Facebook. Es un grato placer para mi presentarles mi sitio web https://saturnoman.com. Es mi portafolio como músico y desarrollador web. En mi sitio web pueden adquirir algunos de los siguientes trabajos musicales:
+    - El primero es “Inspiración”, mi primer trabajo como solista.
+    - El segundo es “Estar en Ti”, cuando pude participar con el grupo Bhajananda.
+    - El tercero “El Largo viaje del Sol”, cuando teníamos la agrupación de Parapeto.
+    - Los métodos de pago son Paypal y tarjetas de crédito.
+También pueden ver mis trabajos actuales en el desarrollo web y escribirme si están interesados en alguna solución de paginas web, cms, html o javascript, entre otras.
+La idea es que sepan que al adquirir un disco en formato digital, están ayudando a muchas personas. Algunos productores y varios músicos.
+Ante cualquier duda, sugerencia o problemas presentados en el sitio web, no duden en contactarme utilizando el formulario de contacto en el mismo sitio web. Un gran abrazo y felices fiestas para todos.
