special gift for navidad 2020 - traffic test from social media accounts

--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -63,6 +63,22 @@
       "titlePage": "Portfolio"
     },
     "music": {
+      "download": "Download",
+      "slider": "key: navidad2020$$",
+      "slider1-1": "key: navidad2020$$",
+      "specialP": "This year has been very hard for everyone. In order to create more visits to my website and deliver some love in the form of music, I have decided to give away my album Inspiration for a few days. But, not everything will be as simple as clicking to download the album below...Let the game begin.",
+      "readmore": "Read More",
+      "titlespe": "Let the game begin",
+      "line1": "The game is very simple. It is called find and unlock. When you click on Download you are asked for a password. Only by using the key you can activate the download of the .zip file containing the entire disk.",
+      "titlespe2": "Where is the Password?",
+      "line2": "Very good question. I have placed the key in several places on my website. I have written it in the following format:",
+      "formatKey": "key: XxxxXxxxxxxxxx",
+      "line3": "The key can be present as text on any of the pages. So it is up to you to read each content carefully. It can also be present in a particular image, so you should not fail to look closely at the images, including those in the gallery.",
+      "titlespe3": "Important notes",
+      "line4": "Once you find the key, please do not reveal it to anyone else. The idea is that you have some fun doing the search and that you may suffer a little :). Once you have the key, use all the words (after the colon), to download and enjoy the disk. For this special gift, I have only placed my disk for free, the other disks can be purchased in the music section. Note for the paranoid: the file does not contain viruses, only music, credits and the cover image but, without worrying so much, you can scan the .zip file before opening it with the key.",
+      "results": "Key No bueno. Try Again. Keep looking",
+      "found": "Download in progress Congratulations!!",
+      "input": "type key here",
       "titlePage": "Music",
       "textMusic1": "Since I can remember, I have always loved music. I have started playing guitar since I was 18 years old and also singing. During my childhood I took music classes on the music conservatory Vicente Emilio Sojo in the beautiful city of Barquisimeto in Venezuela. The Music have been one of my greatest passions. I had the opportunity to play among many great musicians. While living on Morocco I could enjoy playing latin music in many places and cities.",
       "titleMusic1": "Music by other for Others",
