--- a/src/locales/es/translations.json
+++ b/src/locales/es/translations.json
@@ -63,6 +63,22 @@
       "titlePage": "Portfalio"
     },
     "music": {
+      "download": "Descargar",
+      "slider": "clave: navidad2020$$",
+      "slider1-1": "clave: navidad2020$$",
+      "specialP": "Este año ha sido muy duro para todos. Para crear más visitas a mi sitio web y entregar un poco de cariño en forma de música, he decidido regalar mi disco Inspiración por unos días. Pero, no todo será tan sencillo como hacer clic a descargar album acá debajo...Que empiece el juego.",
+      "readmore": "Leer Más",
+      "titlespe": "Que empiece el juego",
+      "line1": "El juego es muy simple. Se llama encuentra y desbloquea. Al hacer clic en Descargar se te pide una clave. Sólo usando la clave puedes activar la descarga del archivo .zip que contiene el disco completo.",
+      "titlespe2": "Y dónde está la Clave?",
+      "line2": "Muy buena pregunta. He colocado la clave en varios lugares de mi sitio web. La he escrito en el siguiente formato:",
+      "formatKey": "clave: XxxxXxxxxxxxxx",
+      "line3": "La clave puede estar presente como texto en cualquiera de las paginas. Así que les toca leer cada contenido cuidadosamente. También puede estar presente en alguna imagen en particular, por lo que no deberías dejar de observar detenidamente las imágenes, incluyendo las de la galería.",
+      "titlespe3": "Notas Importantes",
+      "line4": "Una vez que encuentres la clave, por favor, no la reveles a nadie más. La idea es que se diviertan un poco llevando a cabo la búsqueda y que tal vez, sufran un poco :). Una vez que tengas la clave utiliza toda la parte de palabras(luego de los dos puntos), para poder descargar y disfrutar del disco. Para este regalo especial, sólo he colocado gratuito mi disco, los demás discos pueden adquirirlos en la sección de música. Nota para los paranoicos: el archivo no contiene virus, solo música, créditos y la imagen de portada pero, sin tanto os preocupa, puedes analizar el .zip antes de abrirlo con la clave.",
+      "results": "Clave Incorrecta. Intenta de Nuevo. Sigue buscando",
+      "input": "introduzca clave aquí",
+      "found": "Descarga en Progreso Felicidades!!!",
       "titlePage": "Música",
       "textMusic1": "Desde que puedo recordar, siempre he amado la música. Empecé a tocar la guitarra desde los 18 años y también a cantar. Durante mi infancia tomé clases de música en el conservatorio de música Vicente Emilio Sojo en la hermosa ciudad de Barquisimeto en Venezuela. La música ha sido una de mis grandes pasiones.  Tuve la oportunidad de tocar entre muchos grandes músicos.Mientras vivía en Marruecos pude disfrutar tocando música latina en muchos lugares y ciudades.",
       "titleMusic1": "Música para Todos",
