adding seo for special page and removing easy key so they will have to search for more time

--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -63,6 +63,7 @@
       "titlePage": "Portfolio"
     },
     "music": {
+      "specialTitle": "Gift",
       "download": "Download",
       "slider": "key: navidad2020$$",
       "slider1-1": "key: navidad2020$$",
