--- a/src/locales/es/translations.json
+++ b/src/locales/es/translations.json
@@ -63,6 +63,7 @@
       "titlePage": "Portfalio"
     },
     "music": {
+      "specialTitle": "Regalo",
       "download": "Descargar",
       "slider": "clave: navidad2020$$",
       "slider1-1": "clave: navidad2020$$",
