adding auto detect lang in config 18n, added fixes to SEO description, added main fixes, installed react-i18next - i18next-http-backend - i18next-browser-languagedetector, testing build on netlify now

--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -15,7 +15,7 @@
       "subtTitle": "Developer & Musician"
     },
     "head": {
-      "content": "Full Stack Developer portfolio. Saturno Mangieri design websites using modern technologies as Reactjs, Gatsbyjs, MongoDB, GraphQL, HTML5 and CSS3. He provides practical solutions as: headless CMS, static and dynamic websites that run smoothly and fast. He also composes music that you can buy in this site.",
+      "content": "Saturno Mangieri músico y desarrollador de Sitios web con: Reactjs, Gatsbyjs, GraphQL, CSS3, CMS sin cabeza, sitios estáticos y dinámicos rápidos, y SEO.",
       "keywords": "Websites, Websites design, headless cms, static pages, dynamic pages, music, saturno mangieri, i need a good website, cheap websites, modern websites, meditation music, god's music, prayers, singing prayers",
       "title": "Web Developer and Musican Portfolio - Saturno Mangieri"
     },
