--- a/src/locales/es/translations.json
+++ b/src/locales/es/translations.json
@@ -15,7 +15,7 @@
       "subtTitle": "Desarrollador & Músico"
     },
     "head": {
-      "content": "Desarrollador Full Stack y músico. Saturno Mangieri diseña sitios web utilizando tecnologías modernas como Reactjs, Gatsbyjs, MongoDB, GraphQL, HTML5 y CSS3. Proporciona soluciones prácticas como: CMS sin cabeza, sitios web estáticos y dinámicos que funcionan sin problemas y rápidamente. También compone música que se puede comprar en este sitio.",
+      "content": "Saturno Mangieri musician and web site developer with: Reactjs, Gatsbyjs, GraphQL, CSS3, headless CMS, fast static and dynamic sites, and SEO.",
       "keywords": "Sitios web, diseño de sitios web, cms sin cabeza, páginas estáticas, páginas dinámicas, música, saturno mangieri, necesito un buen sitio web, sitios web baratos, sitios web modernos, música de meditación, música de Dios, oraciones, oraciones cantadas",
       "title": "Portafolio del Desarrollador Web y músico - Saturno Mangieri"
     },
