adding datoCMS as blog and portfolio sources, tested locally, all good, also some minor fixes and improvements, testing live now

--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -60,7 +60,8 @@
         "altItem7": "One Man Project or More for Websites"
     },
     "portfolio": {
-      "titlePage": "Portfolio"
+      "titlePage": "Portfolio",
+      "welcomeText": "My current works include some areas such as: Backend, Frontend, UI/UX, games and blockchain (technology known in its application to cryptocurrencies, a.k.a: Bitcoin)."
     },
     "music": {
       "specialTitle": "Gift",
