--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,15 @@ Where r we now?
     - Probando ahora gitlab para medir consumo, segun que dan 10GB de ancho de banda.
 
 TODO:
+    - All statuc images(gallery and assets) move them from where they are to src/images.
+        - use graphql to serve fluid webp.
+        - test & deploy to main site.
+        - make performance tests now.
+    - fix the names of components and pages.
+    - add the crypto blog as another option.
+        - make 1 page about FAQ about crypto.
+        - make a video tutorial about how to use hive.
+        - after doing all of this and test, deploy & promote to social media, hive ,etc.
     - habilitar que el browser detecte el idioma del sistema operativo y lo asigne al i18next.
     - Enable the live paypal mode. DONE - 06/12 17:05.
         - testing with Lauren making the first buy.
@@ -18,12 +27,18 @@ TODO:
     - Go live, add the custom domain. DONE - 06/12.
     - Add SSL if needed. Netflity added for  free for 3 months under auto-renew.
     
+TODO Updated on 20th July 2021:
 
-Saludos amigas y amigos del Facebook. Es un grato placer para mi presentarles mi sitio web https://saturnoman.com. Es mi portafolio como músico y desarrollador web. En mi sitio web pueden adquirir algunos de los siguientes trabajos musicales:
-    - El primero es “Inspiración”, mi primer trabajo como solista.
-    - El segundo es “Estar en Ti”, cuando pude participar con el grupo Bhajananda.
-    - El tercero “El Largo viaje del Sol”, cuando teníamos la agrupación de Parapeto.
-    - Los métodos de pago son Paypal y tarjetas de crédito.
-También pueden ver mis trabajos actuales en el desarrollo web y escribirme si están interesados en alguna solución de paginas web, cms, html o javascript, entre otras.
-La idea es que sepan que al adquirir un disco en formato digital, están ayudando a muchas personas. Algunos productores y varios músicos.
-Ante cualquier duda, sugerencia o problemas presentados en el sitio web, no duden en contactarme utilizando el formulario de contacto en el mismo sitio web. Un gran abrazo y felices fiestas para todos.
+	1. Change all data source to datoCMS.
+		- blog.
+			- add a blog post about the game development.
+		- projects.
+			- add the landingpage models:
+				- https://cranky-blackwell-3641eb.netlify.app/
+				- https://naive-boat.surge.sh/landing-nfttunz-io-1
+			- add as UI designs:
+				- https://naive-boat.surge.sh/
+		- games.
+
+
+	- DONE all. thanks god.
